[gd_scene load_steps=8 format=3 uid="uid://jf0tvfdqyeod"]

[ext_resource type="Script" uid="uid://cyk6amhgkdr57" path="res://scenes/enemy/enemy.gd" id="1_40wdo"]
[ext_resource type="PackedScene" uid="uid://dqc5pgwdpwxj3" path="res://components/out_of_screen_component.tscn" id="2_gl05p"]
[ext_resource type="PackedScene" uid="uid://buajyleg7pco0" path="res://scenes/health_bar/health_bar.tscn" id="2_tjssy"]
[ext_resource type="Shader" uid="uid://usf5u6khopgl" path="res://effects/shaders/blink.gdshader" id="3_gl05p"]
[ext_resource type="PackedScene" uid="uid://cpyncy3i2e4ux" path="res://components/hitbox_component.tscn" id="5_gl05p"]
[ext_resource type="Script" uid="uid://b5myhavvac2u3" path="res://scenes/enemy/enemy_health_component.gd" id="6_cwlon"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nwmpt"]
resource_local_to_scene = true
shader = ExtResource("3_gl05p")
shader_parameter/blink_color = Color(1, 1, 1, 1)
shader_parameter/blink_intensity = 0.0

[node name="Enemy" type="Node2D"]
script = ExtResource("1_40wdo")

[node name="OutOfScreenComponent" parent="." instance=ExtResource("2_gl05p")]

[node name="HealthBar" parent="." instance=ExtResource("2_tjssy")]
modulate = Color(1, 1, 1, 0)

[node name="Polygon2D" type="Polygon2D" parent="."]

[node name="Line2D" type="Line2D" parent="."]
material = SubResource("ShaderMaterial_nwmpt")
closed = true
width = 3.0

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_gl05p")]
collision_layer = 8
collision_mask = 3
health_component = NodePath("../HealthComponent")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitboxComponent"]

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("6_cwlon")

[connection signal="area_entered" from="HitboxComponent" to="." method="_on_local_frame_area_entered"]
